# proxy_mtg

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  card_test.html  cards.html  example_cards.html
css/: card-colors.css  card-geometry.css  card-landscape.css  card.css  colors.css  dimensions.css  font-settings.css  fonts.css  full-color.css  magic-font.css  monochrome.css  monocrhome.css  normal-card.css  page-layout.css  page.css  saga-card.css
decklists/: catra.json  enduring-ideal.txt  henzie.json  oketra-simple.json  oketra.json  oketra2.json  oketra_simple.json  test.json
examples/: card-examples.html  test-cards.html
html/: card.css  cards.html  normal-card.css  saga-card.css
old-css/: card.css  flip-card.css  normal-card.css  page.css  token-card.css
src/: atomic_cards.rs  cards.rs  command.rs  decklist.rs  general_proxy.rs  html_proxies.rs  main.rs  proxy.rs  proxy_builder.rs  simple_proxy.rs  svg_proxies.rs  svg_proxy.rs  vec_entry.rs
src/atomic_cards/: cardoids.rs  cards.rs  download.rs  metadata.rs  mod.rs  sqlite.rs  types.rs
src/command/: build.rs  list.rs  mod.rs  search.rs  setup.rs
src/html/: elements.rs  general.rs  mod.rs  node.rs  normal.rs  tags.rs  tests.rs  utils.rs
src/proxy/: decklist.rs  decklists.rs  deserializers.rs  mod.rs
src/proxy_cards/: mod.rs  normal.rs  utils.rs  vec_entry.rs
src/rendering/: dual_faced.rs  general.rs  landscapes.rs  manafont.rs  mod.rs  normal.rs  notation.rs  parsing.rs  reminders.rs  tokens.rs  utils.rs  verticalia.rs
testbed/: card-colors.css  card.css  card2.css  test.html
(+14 files in other folders)
