[package]
name = "proxy_mtg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
regex = "1.11.1"
lazy-regex = "3.4.1"
clap = { version = "4.5.38", features = [ "derive" ] }
rand = "0.9.1"
build_html = "2.6.0"

[profile.dev]
opt-level = 2