[package]
name = "proxygenitus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
regex = "1.11.1"
lazy-regex = "3.4.1"
clap = { version = "4.5.38", features = [ "derive" ] }
rand = "0.9.1"
anyhow = "1.0.98"
itertools = "0.14.0"
reqwest = { version = "0.12.18", default-features = false, features = [ "blocking", "rustls-tls" ] }
bigdecimal = "0.4.8"

[profile.dev]
opt-level = 2